--- a/css/style-picker.css
+++ b/css/style-picker.css
@@ -13,12 +13,10 @@ main section{
 	width: 50%;
 }
 
-.palete-picker header{
-	background-color: #D9D9D9;
-}
 .palete-picker ul{
 	list-style: none;
 	display: flex;
+	flex-wrap: wrap;
 }
 .palete-picker li{
 	margin: 10px;
@@ -56,9 +54,18 @@ nav{
 	background-color: white;
 	border-radius: 20px;
 }
+.selected{
+	text-decoration: underline;
+	font-weight: bold;
+}
 header{
 	display: flex;
 	justify-content: space-around;
+	
+	background-color: #D9D9D9;
+}
+.margin20{
+	margin: 20px;
 }
 
 figure{
@@ -102,6 +109,7 @@ menu{
 menu ul{
 	list-style: none;
 	display: flex;
+	
 }
 
 menu li{
